Move the featured newsroom story outside of the list element. Fixes #36.

--- a/src/templates/partials/story-teaser.twig
+++ b/src/templates/partials/story-teaser.twig
@@ -1,4 +1,4 @@
-<article class="story-teaser">
+<article class="{{ featured ? 'story-featured-teaser' : 'story-teaser' }}">
   <div class="story-teaser__media">
     <a href="{{url}}">
       <figure class="media media-image view-mode-teaser">
