--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -62,9 +62,9 @@
         </div>
 
         <div class="story-detail__tags">
-          <div class="tags">
-            <span class="tags__label">Tags:</span>
-            <ul class="tags__list">
+          <span class="story-detail__tags-label">Tags:</span>
+          <div class="story-detail__tags-list">
+            <ul class="tags">
               {% for i in 0..3 %}
                 <li class="tags__item">
                   <a href="#" class="tags__link">Some tag</a>
