--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -33,8 +33,7 @@ $container-max-widths: (
 // prettier-ignore
 $spacers: (
   0: 0,
-  // 1: 1em,
-  // 2: 2em,
+  1: .5rem,
   // 3: 3em,
   4: 40px,
   6: 60px
