--- a/src/templates/paragraphs/related-stories.twig
+++ b/src/templates/paragraphs/related-stories.twig
@@ -15,8 +15,7 @@
             {% endif %}
 
               {% include 'partials/card.twig' with {
-                tag: 'Sustainable Agriculture',
-                author: 'Beryl Levinger',
+                tags: tags,
                 title: 'Sustainable Agriculture in the Sacred Valley',
                 text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.'
               } %}
