--- a/src/scss/utils/_display.scss
+++ b/src/scss/utils/_display.scss
@@ -15,7 +15,9 @@
     }
     // .d#{$infix}-table        { display: table !important; }
     // .d#{$infix}-table-cell   { display: table-cell !important; }
-    // .d#{$infix}-flex         { display: flex !important; }
+    .d#{$infix}-flex {
+      display: flex !important;
+    }
     // .d#{$infix}-inline-flex  { display: inline-flex !important; }
   }
 }
