move tags list to below blurb and change to BEM block instead of Element

--- a/src/templates/t10-story.twig
+++ b/src/templates/t10-story.twig
@@ -62,8 +62,8 @@
         </div>
 
         <div class="story-detail__tags">
-          <span class="story-detail__tags-label">Tags:</span>
-          <div class="story-detail__tags-list">
+          <div class="d-flex">
+            <span class="mr-1">Tags:</span>
             <ul class="tags">
               {% for i in 0..3 %}
                 <li class="tags__item">
