add google custom search styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,6 +40,7 @@
 @import 'components/footer-menu';
 @import 'components/footer';
 @import 'components/form';
+@import 'components/google-custom-search';
 @import 'components/grid-nav';
 @import 'components/hero-form';
 @import 'components/homepage-hero';
