--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,7 +64,7 @@
 @import 'components/profile-info';
 @import 'components/profile-section';
 @import 'components/profile-spotlight-item';
-@import 'components/profile';
+@import 'components/profile-teaser';
 @import 'components/program-panel';
 @import 'components/program-spotlight-item';
 @import 'components/program-spotlight';
