--- a/src/templates/partials/profile-teaser.twig
+++ b/src/templates/partials/profile-teaser.twig
@@ -1,5 +1,5 @@
-<div class="profile">
-  <div class="profile__media">
+<div class="profile-teaser">
+  <div class="profile-teaser__media">
     <a href="#">
       <picture>
         <source srcset="//placehold.it/148x206" media="(min-width: 580px)">
@@ -8,10 +8,10 @@
       </picture>
     </a>
   </div>
-  <div class="profile__content">
-    <h3 class="profile__name"><a href="#">Beryl Levinger</a></h3>
-    <p class="profile__title">Program Chair, Master of Public Administration and International Policy and Development</p>
-    <p class="profile__info">
+  <div class="profile-teaser__content">
+    <h3 class="profile-teaser__name"><a href="#">Beryl Levinger</a></h3>
+    <p class="profile-teaser__title">Program Chair, Master of Public Administration and International Policy and Development</p>
+    <p class="profile-teaser__info">
       <strong>Email:</strong> <a href="mailto:blevinger@middlebury.edu" class="link-border">blevinger@middlebury.edu</a><br>
       <strong>Tel:</strong> 617-324-7535<br>
       <strong>Office:</strong> McCone Building M212<br>
