--- a/src/templates/t19b-profile-list.twig
+++ b/src/templates/t19b-profile-list.twig
@@ -39,7 +39,7 @@
   <ol class="list list--lg mb-6">
     {% for i in 0..3 %}
       <li class="list__item">
-        {% include 'partials/profile.twig' %}
+        {% include 'partials/profile-teaser.twig' %}
       </li>
     {% endfor %}
   </ol>
