--- a/src/templates/partials/profile-explorer.twig
+++ b/src/templates/partials/profile-explorer.twig
@@ -22,7 +22,7 @@
           <ol class="list list--lg">
             {% for i in 0..3 %}
               <li class="list__item">
-                {% include 'partials/profile.twig' %}
+                {% include 'partials/profile-teaser.twig' %}
               </li>
             {% endfor %}
           </ol>
