create taxonomy term template

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,6 +90,7 @@
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
 @import 'components/tags';
+@import 'components/teaser';
 @import 'components/video';
 
 // utils
