add .lead styles for opening paragraph. closes #41

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,3 +1,15 @@
+.lead {
+  font-size: 20px;
+  line-height: 28px;
+  margin-bottom: 2rem;
+  color: $black;
+
+  @include media(md) {
+    font-size: 22px;
+    line-height: 32px;
+  }
+}
+
 .typography {
   :first-child {
     margin-top: 0;
