--- a/src/templates/t13-learning-approach.twig
+++ b/src/templates/t13-learning-approach.twig
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-md-push-1 col-md-7">
           <div class="mb-6">
-            <p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores officia culpa, qui corrupti facere ipsum dolor praesentium odit quod, distinctio harum in quaerat adipisci vero. Omnis voluptates quo architecto totam.</p>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores officia culpa, qui corrupti facere ipsum dolor praesentium odit quod, distinctio harum in quaerat adipisci vero. Omnis voluptates quo architecto totam.</p>
           </div>
         </div>
       </div>
