add tables to basic content template for testing

--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -78,7 +78,6 @@
       <li>some more long ish text</li>
     </ul>
 
-
     <h4>Unordered list</h4>
     <ul>
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quas voluptatibus minima facere nesciunt odio, fugiat distinctio minus consequatur quo placeat neque expedita laudantium incidunt blanditiis laborum nam similique illum.</li>
@@ -93,6 +92,36 @@
       <li>Dignissimos autem sit deserunt ratione illum reiciendis, atque, facere repellat quaerat excepturi tempore neque cupiditate. Ut unde autem dolores, accusamus, magnam pariatur, facere corrupti doloribus obcaecati fugiat earum quis nisi.</li>
       <li>Officiis inventore, repellendus ullam laudantium amet aperiam porro illum est, tempora temporibus ut. Placeat quisquam reprehenderit architecto repudiandae fuga id nisi, modi eum, libero mollitia quis rerum molestiae sunt itaque?</li>
     </ol>
+
+    <table>
+      <thead>
+        <th>table header 1</th>
+        <th>table header 2</th>
+        <th>table header 3</th>
+        <th>table header 4</th>
+      </thead>
+      <tbody>
+      <tr>
+        <td>table data text 1</td>
+        <td>table data text 2</td>
+        <td>table data text 3</td>
+        <td>table data text 4</td>
+      </tr>
+      <tr>
+        <td>table data text 1</td>
+        <td>table data text 2</td>
+        <td>table data text 3</td>
+        <td>table data text 4</td>
+      </tr>
+      <tr>
+        <td>table data text 1</td>
+        <td>table data text 2</td>
+        <td>table data text 3</td>
+        <td>table data text 4</td>
+      </tr>
+      </tbody>
+    </table>
+
   </div>
 
   {# G3 image paragraph #}
