--- a/src/templates/partials/icons.twig
+++ b/src/templates/partials/icons.twig
@@ -72,6 +72,10 @@
 			<title>icon-play</title><path d="M6 4L0 8V0z" fill-rule="evenodd"></path>
 		</symbol>
 
+		<symbol id="icon-plus" viewBox="0 0 16 16">
+			<title>icon-plus</title><path d="M9 7V0H7v7H0v2h7v7h2V9h7V7H9z" fill-rule="evenodd"></path>
+		</symbol>
+
 		<symbol id="icon-plus-accordion" viewBox="0 0 16 16">
 			<title>icon-plus-accordion</title><path d="M16 7H9V0H7v7H0v2h7v7h2V9h7z" fill-rule="evenodd"></path>
 		</symbol>
@@ -102,6 +106,10 @@
 
 		<symbol id="icon-widget-updown" viewBox="0 0 14 24">
 			<title>icon-widget-updown</title><g transform="translate(-1)" fill-rule="evenodd"><path d="M8 24l-6.8-6.8c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L8 21.9l5.8-5.7c.3-.3.7-.3 1 0 .3.3.3.7 0 1L8 24zM8 0l6.8 6.8c.3.3.3.7 0 1-.3.3-.7.3-1 0L8 2.1 2.2 7.8c-.3.3-.7.3-1 0-.3-.3-.3-.7 0-1L8 0z"></path></g>
+		</symbol>
+
+		<symbol id="icon-x" viewBox="0 0 16 16">
+			<title>icon-x</title><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z" fill-rule="nonzero" fill="currentColor"></path>
 		</symbol>
 
 		<symbol id="icon-x-circle" viewBox="0 0 10 10">
