--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -1,6 +1,6 @@
 <div class="program-spotlight">
   <div class="row row--no-gutters">
-    <div class="col-sm-4 col-lg-3">
+    <div class="col-sm-6 col-md-5 col-lg-3">
 
       <div class="program-spotlight__header">
         <h2 class="program-spotlight__title" id="midd-program-spotlight-label">Program Spotlight</h2>
@@ -18,7 +18,7 @@
       </div>
 
     </div>
-    <div class="col-sm-8 col-lg-9">
+    <div class="col-sm-6 col-md-7 col-lg-9">
       <div class="program-spotlight__container swiper-container js-program-spotlight">
         <div class="program-spotlight__content swiper-wrapper">
 
