--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,9 +3,9 @@
   font-family: $font-family-sans-serif;
   text-align: center;
   // white-space: nowrap; // removed for program spotlight button
-  padding: 10px 20px;
   // height: 50px;
-  font-size: 16px;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
   border-radius: 0;
   border: 0;
   cursor: pointer;
