--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   font-family: $font-family-sans-serif;
   text-align: center;
-  // white-space: nowrap; // removed for program spotlight button
+  white-space: nowrap;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
   border-radius: 0;
