use sass variable for primary button hover

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -80,7 +80,7 @@
 
   &:hover,
   &:focus {
-    background-color: #022543; // TODO: move me to variable
+    background-color: $brand-primary-dark;
     color: $white;
 
     svg {
