--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -10,6 +10,7 @@ body {
   font-size: $base-font-size;
   color: $black;
   background-color: $warm-gray;
+  -webkit-font-smoothing: antialiased;
 }
 
 textarea {
