--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -11,7 +11,7 @@
         <h3 class="program-spotlight-item__title">
           <a href="{{program.href}}" class="program-spotlight-item__link">{{program.title}}</a>
         </h3>
-        <p class="program-spotlight-item__text">{{program.blurb}}</p>
+        <p class="program-spotlight-item__text">{{program.text}}</p>
       </div>
       <div class="program-spotlight-item__footer">
         <a href="#"
