--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -14,8 +14,8 @@
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   font-weight: $font-weight-semibold;
-  font-family: $font-family-sans-serif-condensed;
-  font-size: 16px;
+  font-family: $font-family-sans-serif;
+  font-size: 14px;
   margin-bottom: 60px;
   color: $white;
 }
