--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -24,10 +24,10 @@
 .section__title {
   // TODO: need to use a heading element or class e.g. .h3
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: 1px;
   font-weight: $font-weight-semibold;
-  font-family: $font-family-sans-serif-condensed;
-  font-size: 16px;
+  font-family: $font-family-sans-serif;
+  font-size: 14px;
 }
 
 .section__nav {
