add thin divider between spotlight item images so they don't visually look as one

--- a/src/scss/components/_program-spotlight.scss
+++ b/src/scss/components/_program-spotlight.scss
@@ -66,4 +66,10 @@
       display: none;
     }
   }
+
+  @include media(sm) {
+    &:not(:last-child) {
+      border-right: 1px solid $white;
+    }
+  }
 }
