render card titles and text

--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -42,7 +42,8 @@
       </div>
 
       <div class="program-spotlight-item__body">
-        <p class="program-spotlight-item__text">{{program.card.body}}</p>
+        <h4 class="program-spotlight-item__title">{{program.card.title}}</h4>
+        <p class="program-spotlight-item__text">{{program.card.text}}</p>
       </div>
       <div class="program-spotlight-item__footer">
         <a href="{{program.card.link_href}}" class="button button--secondary button--pill button--block">{{program.card.link_text}}</a>
