use plain button class on close button

--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -30,8 +30,8 @@
 
       <div class="program-spotlight-item__controls">
         <button
-          class="button button--secondary button--circle"
           role="button"
+          class="button"
           aria-label="Close"
           data-toggle-target=".js-spotlight-item-{{id}}"
           data-toggle-linked="spotlight-item-{{id}}">
