use text-right util instead of new class

--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -28,7 +28,7 @@
     </div>
     <aside class="program-spotlight-item__side program-spotlight-item__side--back">
 
-      <div class="program-spotlight-item__controls">
+      <div class="text-right">
         <button
           role="button"
           class="button"
