use variable so breakpoint is consistent with others

--- a/src/scss/components/_program-spotlight-item.scss
+++ b/src/scss/components/_program-spotlight-item.scss
@@ -94,7 +94,7 @@ $spotlight-item-breakpoint: 'sm';
   font-family: $font-family-serif;
   margin-bottom: 10px;
 
-  @include media(md) {
+  @include media($spotlight-item-breakpoint) {
     font-size: 22px;
   }
 }
