add fade in animation to program spotlight item

--- a/src/scss/components/_program-spotlight-item.scss
+++ b/src/scss/components/_program-spotlight-item.scss
@@ -39,7 +39,20 @@ $spotlight-item-breakpoint: 'sm';
   }
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .program-spotlight-item__side {
+  animation: fade-in 1s;
+
   @include media($spotlight-item-breakpoint) {
     height: 100%;
     display: flex;
