--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -14,11 +14,12 @@
         <p class="program-spotlight-item__text">{{program.text}}</p>
       </div>
       <div class="program-spotlight-item__footer">
-        <a href="#"
+        <a href="#midd-program-spotlight-item-aside-{{id}}"
           class="button button--secondary button--circle"
           data-toggle-target=".js-spotlight-item-{{id}}"
           data-toggle-linked="spotlight-item-{{id}}"
-          data-toggle-group="spotlight-items">
+          data-toggle-group="spotlight-items"
+          aria-controls="midd-program-spotlight-item-aside-{{id}}">
           <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-plus" />
           </svg>
@@ -26,7 +27,7 @@
       </div>
 
     </div>
-    <aside class="program-spotlight-item__side program-spotlight-item__side--back">
+    <aside class="program-spotlight-item__side program-spotlight-item__side--back" id="midd-program-spotlight-item-aside-{{id}}">
 
       <div class="text-right">
         <button
