--- a/src/templates/partials/page-hero.twig
+++ b/src/templates/partials/page-hero.twig
@@ -1,13 +1,29 @@
 <div class="page-hero">
-  <div class="page-hero__media">
-    <picture>
-      <source srcset="http://placehold.it/1440x810" media="(min-width: 580px)">
-      <source srcset="http://placehold.it/720x405">
-      <img src="http://placehold.it/1440x810" alt="">
-    </picture>
-  </div>
-  <div class="page-hero__content typography">
-    {% block content %}{% endblock %}
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-push-1 col-md-11">
+
+        <div class="row">
+          <div class="page-hero__media">
+            <figure>
+              <picture>
+                <source srcset="http://placehold.it/960x540" media="(min-width: 641px)">
+                <source srcset="http://placehold.it/640x360" media="(min-width: 401px)">
+                <source srcset="http://placehold.it/400x225">
+                <img src="http://placehold.it/960x540" alt="">
+              </picture>
+              <figcaption class="media__caption">Some caption for the page hero image</figcaption>
+            </figure>
+          </div>
+          <div class="page-hero__content typography">
+            {% block content %}{% endblock %}
+          </div>
+        </div>
+
+      </div>
+    </div>
+
   </div>
 </div>
 
