add horizontal and top padding for media captions instead of just top margin

--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -12,5 +12,7 @@
   font-family: $font-family-sans-serif;
   font-size: 14px;
   color: $text-gray;
-  margin-top: 10px;
+  padding-top: 0.5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
