--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 $screen-sm: 580px;
 $screen-md: 960px;
 $screen-lg: 1200px;
-$screen-xl: 1440px;
+$screen-xl: 1440px; // TODO: do we need this? There's no col-xl-* or media(xl) usage
 
 // need to remove this somehow
 $grid-container-width: 1440px;
