--- a/src/templates/paragraphs/slideshow.twig
+++ b/src/templates/paragraphs/slideshow.twig
@@ -4,12 +4,12 @@
   <div class="slideshow__container swiper-container js-slideshow">
     <div class="slideshow__content swiper-wrapper">
       {% for i in 0..2 %}
-        <figure class="slideshow__item swiper-slide">
+        <figure class="media media--image slideshow__item swiper-slide">
           <img data-src="//placehold.it/1280x720" alt="" class="swiper-lazy">
           <figcaption class="slideshow__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit</figcaption>
         </figure>
       {% endfor %}
-        <figure class="slideshow__item swiper-slide">
+        <figure class="media media--image slideshow__item swiper-slide">
           <img data-src="//placehold.it/1280x720/000" alt="" class="swiper-lazy">
           <figcaption class="slideshow__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit</figcaption>
         </figure>
