--- a/src/templates/paragraphs/video.twig
+++ b/src/templates/paragraphs/video.twig
@@ -1,5 +1,5 @@
 {#G6 video#}
-<figure class="video js-video" data-video='<iframe src="https://player.vimeo.com/video/221201240" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'>
+<figure class="video js-video" data-video='{{ '<iframe src="https://player.vimeo.com/video/221201240" width="400" height="225" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>'|escape('html') }}'>
   <div class="video__content js-video-content">
     <a href="https://player.vimeo.com/video/221201240" class="video__link js-video-link">
       <picture>
