move speaker__photo class to outer div
this is due to trying to reuse figures without custom classes in drupal

--- a/src/templates/partials/speaker.twig
+++ b/src/templates/partials/speaker.twig
@@ -1,7 +1,11 @@
 <div class="speaker">
-  <a href="#">
-    <img src="//placehold.it/116x161" alt="" class="speaker__photo">
-  </a>
+  <div class="speaker__photo">
+    <a href="#">
+      <figure>
+        <img src="//placehold.it/116x161" alt="">
+      </figure>
+    </a>
+  </div>
   <h3 class="speaker__name"><a href="#">Michael Green</a></h3>
   <div class="speaker__content">
     <p>Program Manager of the Monterey State Historic Park, who will discuss the history of Cooper Molera.</p>
